// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Badge /> renders 1`] = `
<div>
  <span
    class="badge"
  >
    4
  </span>
</div>
`;

exports[`<Badge /> should output a badge with the className of \`badge new\` and 1`] = `
<div>
  <span
    class="badge new"
  >
    3
  </span>
</div>
`;

exports[`<Badge /> should output a custom caption if provided 1`] = `
<div>
  <span
    class="badge"
    data-badge-caption="custom caption"
  >
    4
  </span>
</div>
`;
